Nuevas ventanas y css modificado

--- a/src/main/webapp/VAADIN/themes/temaPrincipal/temaPrincipal.scss
+++ b/src/main/webapp/VAADIN/themes/temaPrincipal/temaPrincipal.scss
@@ -112,4 +112,61 @@
 	transition: box-shadow 180ms, border 180ms;
 	font-size: 16px;
 }
+
+.buttonMenu {
+  background: transparent no-repeat;
+  border: none;
+}
+
+.imagenClick {
+  cursor: pointer;
+}
+
+.temaPrincipal {
+     //default margins for all layouts with margin enabled
+    .v-margin-left   {padding-left:   15px;}
+    .v-margin-right  {padding-right:  15px;}
+    .v-margin-top    {padding-top:    10px;}
+    .v-margin-bottom {padding-bottom: 10px;}
+
+    //custom margins for layouts with specific css set and margin enabled
+    .custom-margins{
+        .v-margin-left   {padding-left:   250px;}
+        .v-margin-right  {padding-right:  250px;}
+        .v-margin-top    {padding-top:    100px;}
+        .v-margin-bottom {padding-bottom: 300px;}
+    }
+}
+
+.temaPrincipal .v-textarea-propia {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+	margin: 0;
+	font: inherit;
+	
+	font-weight: 400;
+	line-height: normal;
+	height: 37px;
+	border-radius: 4px;
+	padding: 6px;
+	border: 1px solid #c5c5c5;
+	background: white;
+	color: #474747;
+	-webkit-box-shadow: inset 0 1px 0 #f7f7f7, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #f7f7f7, 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-transition: box-shadow 180ms, border 180ms;
+	-moz-transition: box-shadow 180ms, border 180ms;
+	transition: box-shadow 180ms, border 180ms;
+	height: auto;
+	resize: none;
+	white-space: pre-wrap;
+	width: 185px;
+}
 }
