--- a/src/main/webapp/VAADIN/themes/temaPrincipal/temaPrincipal.scss
+++ b/src/main/webapp/VAADIN/themes/temaPrincipal/temaPrincipal.scss
@@ -169,4 +169,18 @@
 	white-space: pre-wrap;
 	width: 185px;
 }
+
+.imgRedonda {
+    border-radius:160px;
+    border:2px solid #0091B8;
+}
+
+.conBordes {
+    border: solid;
+    border:1px solid #0091B8;
+}
+
+.conBordes2 {
+    border-bottom:1px solid #0091B8;
+}
 }
